chore: cleanup branch after fork

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  pingvin-share:
-    image: stonith404/pingvin-share # or ghcr.io/stonith404/pingvin-share
+ ottrbox:
+    image: ghcr.io/aottr/ottrbox
     restart: unless-stopped
     ports:
       - 3000:3000
