--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: 💬 Discord
-    url: https://discord.gg/wHRQ9nFRcK
+    url: https://discord.gg/hupa2vnUEu
     about: For help and chatting with the community
