--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@mantine/modals": "^6.0.21",
     "@mantine/next": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.7.7",
     "cookies-next": "^4.2.1",
     "file-saver": "^2.0.5",
@@ -26,7 +28,7 @@
     "markdown-to-jsx": "^7.5.0",
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
-    "next": "^14.2.26",
+    "next": "^14.2.30",
     "next-http-proxy-middleware": "^1.2.6",
     "next-pwa": "^5.6.0",
     "p-limit": "^6.1.0",
