--- a/config.example.yaml
+++ b/config.example.yaml
@@ -41,6 +41,8 @@ cache:
 email:
   #Whether to allow email sharing with recipients. Only enable this if SMTP is activated.
   enableShareEmailRecipients: "false"
+  #Setting this will override the default sender name. The application name will be used if this is not set.
+  senderName: ""
   #Subject of the email which gets sent to the share recipients.
   shareRecipientsSubject: Files shared with you
   #Message which gets sent to the share recipients. Available variables:
